--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
     <head>
         <title>Odin recipes</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <img src="./recipes/images/odin-logo.png">
         <ul>
-            <li><a href="recipes/tuna.html">Tuna and Artichoke Wraps</a></li>
-            <li><a href="recipes/pasta.html">Pasta Chickpea Salad</a></li>
-            <li><a href="recipes/bread.html">Pumpkin Coconut Bread</a></li>
+            <div class="listcont"><li><a href="recipes/tuna.html">Tuna and Artichoke Wraps</a></li></div>
+            <div class="listcont"><li><a href="recipes/pasta.html">Pasta Chickpea Salad</a></li></div>
+            <div class="listcont"><li><a href="recipes/bread.html">Pumpkin Coconut Bread</a></li></div>
         </ul>
     </body>
 </html>
